# sta-lta-detector

./: CMakeLists.txt  LAB10.CSV  README.md  arduinoCode.cpp  lab10.cpp  main.cpp  pythonPath.cpp
.github/workflows/: build.yml
